--- a/travail4.html
+++ b/travail4.html
@@ -5,105 +5,36 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link rel="stylesheet" href="style2.css" />
+
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
             href="https://fonts.googleapis.com/css2?family=Itim&display=swap"
             rel="stylesheet"
         />
+        <link rel="stylesheet" href="style4.css" />
     </head>
     <body>
-        <div class="msgpub">
-            <div class="nav">
-                <h1 class="ariere">P</h1>
-                <p class="pointier">----</p>
-                <img
-                    class="logo"
-                    src="./images/logo.png"
-                    width="70px"
-                    alt="logoo"
-                />
-                <p class="pointier">----</p>
-            </div>
-
-            <div class="liste">
-                <div class="listedis">
-                    <p class="titre marg">Messages Publics</p>
-                    <div class="entremsg">
-                        <div class="discution">
-                            <img
-                                width="50px"
-                                src="./images/zakarialogo.gif"
-                                alt="fvvfvffvee"
-                            />
-                            <div>
-                                <div class="heurnom">
-                                    <p class="nomdis">Zakaria HANAFI</p>
-                                    <p class="heur">02:03</p>
-                                </div>
-                                <h2>bonne jour l'équipe</h2>
-                            </div>
-                        </div>
-
-                        <div class="discution mod">
-                            <img
-                                class="max"
-                                width="50px"
-                                src="./images/amar.jpeg"
-                                alt="ffdrffcfcd"
-                            />
-                            <div>
-                                <div class="heurnom">
-                                    <p class="nomdis">Amar ALLILAT</p>
-                                    <p class="heur">02:03</p>
-                                </div>
-                                <h2>Aurevoir tous le monde</h2>
-                            </div>
-                        </div>
-                    </div>
+        <div class="discution moz">
+            <img width="50px" src="./images/fatma.jpg" alt="fvvfvffvee" />
+            <div>
+                <div class="heurnom">
+                    <p class="nomdis">fatma216</p>
+                    <p class="heur">04:30</p>
                 </div>
-
-                <div class="list">
-                    <p class="titre">Listes d'Amis</p>
-                    <div class="group">
-                        <img class="max" src="./images/amar.jpeg" alt="fffff" />
-                        <p>Amar ALLILAT</p>
-                    </div>
-
-                    <div class="group">
-                        <img
-                            class="max"
-                            src="./images/amine.jpeg"
-                            alt="fffff"
-                        />
-                        <p>Amine ILLOUL</p>
-                    </div>
-
-                    <div class="group">
-                        <img class="max" src="./images/fatma.jpg" alt="fffff" />
-                        <p>بودبوس فاطمة</p>
-                    </div>
-
-                    <div class="group">
-                        <img
-                            class="max"
-                            src="./images/index.jpeg"
-                            alt="fffff"
-                        />
-                        <p>Sammoussa KWALA</p>
-                    </div>
-
-                    <div class="group">
-                        <img
-                            class="max"
-                            src="./images/zakarialogo.gif"
-                            alt="fffff"
-                        />
-                        <p>Zakaria HANAFI</p>
-                    </div>
-                </div>
+                <h2>okaaayeeee</h2>
             </div>
+        </div>
+
+        <div class="form">
+            <input
+                class="gris"
+                type="text"
+                name="Messages"
+                placeholder="Ecrire un message public..."
+            />
+
+            <input class="bleu" type="submit" value="Inscription" />
         </div>
     </body>
 </html>
