--- a/travail3.html
+++ b/travail3.html
@@ -29,7 +29,7 @@
                 <p class="pointier">----</p>
                 <img class="logo" src="./images/zakarialogo.gif" alt="logoo" />
             </div>
-            <div class="list">
+            <div class="liste">
                 <div class="list">
                     <p class="titre">Les messages privés</p>
                     <div class="entremsg">
@@ -79,6 +79,34 @@
                             />
                         </div>
                     </div>
+                </div>
+            </div>
+
+            <div>
+                <div class="discution moz">
+                    <img
+                        width="50px"
+                        src="./images/fatma.jpg"
+                        alt="fvvfvffvee"
+                    />
+                    <div>
+                        <div class="heurnom">
+                            <p class="nomdis">fatma216</p>
+                            <p class="heur">04:30</p>
+                        </div>
+                        <h2>okaaayeeee</h2>
+                    </div>
+                </div>
+
+                <div class="form">
+                    <input
+                        class="gris"
+                        type="text"
+                        name="Messages"
+                        placeholder="Ecrire un message public..."
+                    />
+
+                    <input class="bleu" type="submit" value="Inscription" />
                 </div>
             </div>
         </div>
