--- a/travail3.html
+++ b/travail3.html
@@ -80,10 +80,24 @@
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div>
-                <div class="discution moz">
+                <div class="entremsgs">
+                    <div class="discution">
+                        <img
+                            width="50px"
+                            src="./images/amar.jpeg"
+                            alt="fvvfvffvee"
+                        />
+                        <div>
+                            <div class="heurnom">
+                                <p class="nomdis">Amar144</p>
+                                <p class="heur">10h</p>
+                            </div>
+                            <h2>ideuh</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="discution mod">
                     <img
                         width="50px"
                         src="./images/fatma.jpg"
@@ -92,9 +106,9 @@
                     <div>
                         <div class="heurnom">
                             <p class="nomdis">fatma216</p>
-                            <p class="heur">04:30</p>
+                            <p class="heur">10:30</p>
                         </div>
-                        <h2>okaaayeeee</h2>
+                        <h2>buenos dias</h2>
                     </div>
                 </div>
 
@@ -103,10 +117,10 @@
                         class="gris"
                         type="text"
                         name="Messages"
-                        placeholder="Ecrire un message public..."
+                        placeholder="Ecrire un message à Amar ideuh..."
                     />
 
-                    <input class="bleu" type="submit" value="Inscription" />
+                    <input class="bleu" type="submit" value="envoyer" />
                 </div>
             </div>
         </div>
