--- a/travail2.html
+++ b/travail2.html
@@ -111,7 +111,7 @@
                             </div>
                         </div>
 
-                        <div class="discution mod">
+                        <div class="discution moz">
                             <img
                                 width="50px"
                                 src="./images/amar.jpeg"
@@ -141,7 +141,7 @@
                             </div>
                         </div>
 
-                        <div class="discution mod">
+                        <div class="discution moz">
                             <img
                                 width="50px"
                                 src="./images/fatma.jpg"
@@ -174,7 +174,7 @@
                             </div>
                         </div>
 
-                        <div class="discution mod">
+                        <div class="discution moz">
                             <img
                                 width="50px"
                                 src="./images/index.jpeg"
@@ -204,7 +204,7 @@
                             </div>
                         </div>
 
-                        <div class="discution mod">
+                        <div class="discution moz">
                             <img
                                 width="50px"
                                 src="./images/amar.jpeg"
@@ -234,7 +234,7 @@
                             </div>
                         </div>
 
-                        <div class="discution mod">
+                        <div class="discution moz">
                             <img
                                 width="50px"
                                 src="./images/fatma.jpg"
