--- a/travail3.html
+++ b/travail3.html
@@ -82,46 +82,149 @@
                 </div>
 
                 <div class="entremsgs">
-                    <div class="discution">
-                        <img
-                            width="50px"
-                            src="./images/amar.jpeg"
-                            alt="fvvfvffvee"
-                        />
-                        <div>
-                            <div class="heurnom">
-                                <p class="nomdis">Amar144</p>
-                                <p class="heur">10h</p>
+                    <div class="listes">
+                        <div class="align">
+                            <div class="discution">
+                                <img
+                                    width="50px"
+                                    src="./images/amar.jpeg"
+                                    alt="fvvfvffvee"
+                                />
+                                <div>
+                                    <div class="heurnom">
+                                        <p class="nomdis">Amar144</p>
+                                        <p class="heur">10h</p>
+                                    </div>
+                                    <h2>ideuh</h2>
+                                </div>
                             </div>
-                            <h2>ideuh</h2>
+
+                            <div class="discution mod">
+                                <img
+                                    width="50px"
+                                    src="./images/fatma.jpg"
+                                    alt="fvvfvffvee"
+                                />
+                                <div>
+                                    <div class="heurnom">
+                                        <p class="nomdis">fatma216</p>
+                                        <p class="heur">10:30</p>
+                                    </div>
+                                    <h2>buenos dias</h2>
+                                </div>
+                            </div>
+
+                            <div class="discution">
+                                <img
+                                    width="50px"
+                                    src="./images/fatma.jpg"
+                                    alt="fvvfvffvee"
+                                />
+                                <div>
+                                    <div class="heurnom">
+                                        <p class="nomdis">fatma216</p>
+                                        <p class="heur">10:00</p>
+                                    </div>
+                                    <h2>On a cours aujourd’hui ....</h2>
+                                </div>
+                            </div>
+
+                            <div class="discution mod">
+                                <img
+                                    width="50px"
+                                    src="./images/amar.jpeg"
+                                    alt="fvvfvffvee"
+                                />
+                                <div>
+                                    <div class="heurnom">
+                                        <p class="nomdis">Amar144</p>
+                                        <p class="heur">10:15</p>
+                                    </div>
+                                    <h2>oui</h2>
+                                </div>
+                            </div>
+
+                            <div class="discution">
+                                <img
+                                    width="50px"
+                                    src="./images/fatma.jpg"
+                                    alt="fvvfvffvee"
+                                />
+                                <div>
+                                    <div class="heurnom">
+                                        <p class="nomdis">fatma216</p>
+                                        <p class="heur">11:30</p>
+                                    </div>
+                                    <h2>On a cours sur quoi ?????</h2>
+                                </div>
+                            </div>
+
+                            <div class="discution mod">
+                                <img
+                                    width="50px"
+                                    src="./images/amar.jpeg"
+                                    alt="fvvfvffvee"
+                                />
+                                <div>
+                                    <div class="heurnom">
+                                        <p class="nomdis">Amar144</p>
+                                        <p class="heur">11:35</p>
+                                    </div>
+                                    <h2>sur boostrap me soul hh</h2>
+                                </div>
+                            </div>
+
+                            <div class="discution">
+                                <img
+                                    width="50px"
+                                    src="./images/fatma.jpg"
+                                    alt="fvvfvffvee"
+                                />
+                                <div>
+                                    <div class="heurnom">
+                                        <p class="nomdis">fatma216</p>
+                                        <p class="heur">11:39</p>
+                                    </div>
+                                    <h2>hhh, bon</h2>
+                                </div>
+                            </div>
+
+                            <div class="discution mod">
+                                <img
+                                    width="50px"
+                                    src="./images/amar.jpeg"
+                                    alt="fvvfvffvee"
+                                />
+                                <div>
+                                    <div class="heurnom">
+                                        <p class="nomdis">Amar144</p>
+                                        <p class="heur">11:40</p>
+                                    </div>
+                                    <h2>hhhhhhhhhhhhhhhhhh</h2>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form">
+                            <input
+                                class="gris"
+                                type="text"
+                                name="Messages"
+                                placeholder="Ecrire un message à Amar ideuh..."
+                            />
+
+                            <input class="bleu" type="submit" value="envoyer" />
                         </div>
                     </div>
-
-                    <div class="discution mod">
-                        <img
-                            width="50px"
-                            src="./images/fatma.jpg"
-                            alt="fvvfvffvee"
-                        />
-                        <div>
-                            <div class="heurnom">
-                                <p class="nomdis">fatma216</p>
-                                <p class="heur">10:30</p>
-                            </div>
-                            <h2>buenos dias</h2>
-                        </div>
-                    </div>
-
-                    <div class="form">
-                        <input
-                            class="gris"
-                            type="text"
-                            name="Messages"
-                            placeholder="Ecrire un message à Amar ideuh..."
-                        />
-
-                        <input class="bleu" type="submit" value="envoyer" />
-                    </div>
+                </div>
+                <div>
+                    <img
+                        width="200px"
+                        src="./images/amar.jpeg"
+                        alt="crgfuihfd"
+                    />
+                    <h2>Amar ALLILAT</h2>
+                    <h2>(Amar144)</h2>
+                    <button>plus d'information</button>
                 </div>
             </div>
         </div>
