--- a/travail3.html
+++ b/travail3.html
@@ -27,6 +27,9 @@
                 <p class="pointier">----</p>
                 <img class="logo" src="./images/index.jpeg" alt="logoo" />
                 <p class="pointier">----</p>
+                <img class="logo" src="./images/abdou.jpg" alt="logoo" />
+
+                <p class="pointier">----</p>
                 <img class="logo" src="./images/zakarialogo.gif" alt="logoo" />
             </div>
             <div class="liste">
@@ -53,10 +56,10 @@
                         </div>
 
                         <div class="amis">
-                            <p>بودبوس فاطمة</p>
+                            <p>abdou salam</p>
                             <img
                                 class="max"
-                                src="./images/fatma.jpg"
+                                src="./images/abdou.jpg"
                                 alt="fffff"
                             />
                         </div>
@@ -224,7 +227,9 @@
                     />
                     <h2>Amar ALLILAT</h2>
                     <h2>(Amar144)</h2>
-                    <button>plus d'information</button>
+                    <a href="travail4.html"
+                        ><button>plus d'information</button></a
+                    >
                 </div>
             </div>
         </div>
