--- a/travail4.html
+++ b/travail4.html
@@ -15,7 +15,20 @@
         <link rel="stylesheet" href="style4.css" />
     </head>
     <body>
-        
+        <img src="./images/amar.jpeg" alt="logo" />
+        <div class="info">
+            <div class="margin">
+                <p>Prénom: Amar</p>
+                <p>Nom: ALLILAT</p>
+                <p>pseudo: (Amar144)</p>
+                <p>inscrit depuis 35 ans</p>
+                <p>Age: 26 ans</p>
+            </div>
+            <div>
+                <a class="grandir" href="travail3.html"
+                    ><button>Revenir à la discution</button></a
+                >
+            </div>
         </div>
     </body>
 </html>
