--- a/travail2.html
+++ b/travail2.html
@@ -268,6 +268,12 @@
 
                 <div class="list">
                     <p class="titre">Listes d'Amis</p>
+
+                    <div class="group">
+                        <img class="max" src="./images/abdou.jpg" alt="fffff" />
+                        <p>Abdou salam</p>
+                    </div>
+
                     <div class="group">
                         <img class="max" src="./images/amar.jpeg" alt="fffff" />
                         <p>Amar ALLILAT</p>
